--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@gridsome/plugin-sitemap": "^0.2.3",
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/transformer-remark": "^0.4.0",
+    "aos": "^2.3.4",
     "axios": "^0.19.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-purgecss": "^1.0.12",
