--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "gridsome": "^0.7.0",
     "gridsome-plugin-purgecss": "^1.0.12",
     "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0"
+    "particles.js": "^2.0.0",
+    "sass-loader": "^8.0.0",
+    "vue2-smooth-scroll": "^1.1.1"
   }
 }
