--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,16 +6,16 @@ media_folder: "static/uploads"
 public_folder: "uploads"
 
 collections:
-    - name: "events" # Used in routes, e.g., /admin/collections/blog
-      label: "Event" # Used in the UI
-      folder: "events" # The path to the folder where the documents are stored
+    - name: "courses" # Used in routes, e.g., /admin/collections/blog
+      label: "Course" # Used in the UI
+      folder: "courses" # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
       fields: # The fields for each document, usually in front matter
         - {label: "Title", name: "title", widget: "string"}
-        - {label: "Abstract", name: "abstract", widget: "string"}
+        - {label: "Teacher", name: "teacher", widget: "string"}
+        - {label: "Duration", name: "duration", widget: "string"}
         - {label: "Image", name: "image", widget: "image"}
-        - {label: "Meeting Date", name: "dateMeeting", widget: "string"}
         - {label: "Body", name: "body", widget: "markdown"}
         - {label: "Publish Date", name: "date", widget: "datetime"}
     - name: "snippets" # Used in routes, e.g., /admin/collections/blog
