--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,7 +7,7 @@ public_folder: "uploads"
 
 collections:
     - name: "courses" # Used in routes, e.g., /admin/collections/blog
-      label: "Course" # Used in the UI
+      label: "Corsi e seminari" # Used in the UI
       folder: "corsi-e-seminari" # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
