--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -53,8 +53,8 @@ collections:
         - {label: "Link", name: "link", widget: "string"}
         - {label: "Author", name: "author", widget: "string"}
         - {label: "Date", name: "date", widget: "datetime"}
-    - name: "Menù navigazione" # Used in routes, e.g., /admin/collections/blog
-      label: "Nav" # Used in the UI
+    - name: "nav" # Used in routes, e.g., /admin/collections/blog
+      label: "Menù navigazione" # Used in the UI
       folder: "nav" # The path to the folder where the documents are stored
       create: true # Allow users to create new documents in this collection
       slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
