created travels collection

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,6 +30,20 @@ collections:
         - {label: "Image", name: "image", widget: "image"}
         - {label: "Body", name: "body", widget: "markdown"}
         - {label: "Publish Date", name: "date", widget: "datetime"}
+    - name: "travels" # Used in routes, e.g., /admin/collections/blog
+      label: "Viaggi" # Used in the UI
+      folder: "viaggi" # The path to the folder where the documents are stored
+      create: true # Allow users to create new documents in this collection
+      slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+      fields: # The fields for each document, usually in front matter
+        - {label: "Title", name: "title", widget: "string"}
+        - {label: "Place", name: "place", widget: "string"}
+        - {label: "Month", name: "month", widget: "string"}
+        - {label: "Duration", name: "duration", widget: "string"}
+        - {label: "Abstract", name: "abstract", widget: "string"}
+        - {label: "Image", name: "image", widget: "image"}
+        - {label: "Body", name: "body", widget: "markdown"}
+        - {label: "Publish Date", name: "date", widget: "datetime"}
     - name: "snippets" # Used in routes, e.g., /admin/collections/blog
       label: "Snippet" # Used in the UI
       folder: "snippets" # The path to the folder where the documents are stored
