--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.19.0",
     "gridsome": "^0.7.0",
     "gridsome-plugin-purgecss": "^1.0.12",
+    "lightbox2": "^2.11.1",
     "node-sass": "^4.13.0",
     "particles.js": "^2.0.0",
     "sass-loader": "^8.0.0",
