--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,7 +12,7 @@ collections:
       create: false # Allow users to create new documents in this collection
       slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
       fields: # The fields for each document, usually in front matter
-        - {label: "Titolo header", name: "headerTitle", widget: "string"}
+        - {label: "Titolo header", name: "headerTitle", widget: "text"}
         - {label: "Titolo consulenze", name: "consultingTitle", widget: "string"}
         - {label: "Descrizione consulenze", name: "consultingDescription", widget: "string"}
         - {label: "Titolo corsi", name: "courseTitle", widget: "string"}
