--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -12,13 +12,14 @@ collections:
       create: false # Allow users to create new documents in this collection
       slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
       fields: # The fields for each document, usually in front matter
+        - {label: "Immagine header", name: "headerImage", widget: "image"}
         - {label: "Titolo header", name: "headerTitle", widget: "text"}
         - {label: "Titolo consulenze", name: "consultingTitle", widget: "string"}
         - {label: "Descrizione consulenze", name: "consultingDescription", widget: "string"}
         - {label: "Titolo corsi", name: "courseTitle", widget: "string"}
         - {label: "Descrizione corsi", name: "courseDescription", widget: "string"}
         - {label: "Titolo trattamenti", name: "treatmentsTitle", widget: "string"}
-        - {label: "Descrizione treatments", name: "treatmentsDescription", widget: "string"}
+        - {label: "Descrizione trattamenti", name: "treatmentsDescription", widget: "string"}
         - {label: "Titolo viaggi", name: "travelTitle", widget: "string"}
         - {label: "Descrizione viaggi", name: "travelDescription", widget: "string"}
         - {label: "Titolo descrizione 1", name: "titleDescription1", widget: "string"}
@@ -26,7 +27,6 @@ collections:
         - {label: "Immagine 1", name: "imgDescription1", widget: "image"}
         - {label: "Titolo descrizione 2", name: "titleDescription2", widget: "string"}
         - {label: "Descrizione 2", name: "description2", widget: "text"}
-        - {label: "immagine header", name: "headerImage", widget: "image"}
     - name: "courses" # Used in routes, e.g., /admin/collections/blog
       label: "Corsi e seminari" # Used in the UI
       folder: "corsi-e-seminari" # The path to the folder where the documents are stored
