--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -23,7 +23,7 @@ collections:
         - {label: "Titolo viaggi", name: "travelTitle", widget: "string"}
         - {label: "Descrizione viaggi", name: "travelDescription", widget: "string"}
         - {label: "Titolo descrizione 1", name: "titleDescription1", widget: "string"}
-        - {label: "Descrizione 1", name: "description1", widget: "text"}
+        - {label: "Descrizione 1", name: "description1", widget: "markdown"}
         - {label: "Immagine 1", name: "imgDescription1", widget: "image"}
         - {label: "Titolo descrizione 2", name: "titleDescription2", widget: "string"}
         - {label: "Descrizione 2", name: "description2", widget: "text"}
